<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Game_Name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView_title"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:text="@string/Some_text_shit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_title"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/Ask_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_please_enter"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/img_tictactoe"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textView_title"
            android:contentDescription="@string/Game_Name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input_name"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_please_enter"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:hint="@string/Name"/>
    <Button
            android:text="@string/Start_But"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp" app:srcCompat="@drawable/img_epita"
            android:id="@+id/imageView4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/Made"/>
    <TextView
            android:text="@string/Made"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="465dp"
            android:id="@+id/textView_Made"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            tools:ignore="MissingConstraints"/>
</android.support.constraint.ConstraintLayout>