<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".GameActivity">


    <TableLayout
            android:background="#000000"
            android:id="@+id/glGameBoard"
            android:layout_width="228dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:rowCount="3"
            android:columnCount="3"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.497"
    >


        <TableRow android:layout_width="217dp" android:layout_height="33dp">

            <Button
                    android:id="@+id/btn1"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn2"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn3"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

        </TableRow>

        <!--Row 2-->
        <TableRow>

            <Button
                    android:id="@+id/btn4"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn5"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn6"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

        </TableRow>


        <TableRow android:layout_height="345dp" android:layout_width="wrap_content">

            <Button
                    android:id="@+id/btn7"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn8"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/btn9"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

        </TableRow>

    </TableLayout>


    <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:padding="8dp"
    />
    <TextView
            android:text="@string/Turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerTurn0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintVertical_bias="0.077"/>
    <TextView
            android:text="@string/x_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/playerTurn0" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintVertical_bias="0.088"/>
    <TextView
            android:text="@string/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/playerTurn1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintVertical_bias="0.366"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerName" android:text="@string/n" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.366"/>
    <TextView
            android:text="Player turn :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerTurn1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintVertical_bias="0.366"/>

</android.support.constraint.ConstraintLayout>

